--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
-<html>
+<!DOCTYPE html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <title>Simple Interest Calculator</title>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class= "maindiv">
+            <h1>Simple Interest Calculator</h1>
+             
+            <!--Labeling Amount-->
+            <label for="rate">Amount </label>&nbsp;&nbsp;&nbsp;&nbsp;
+	    <span style="padding-left:20px">
+            <input type="number"  id="principal">  <br/>
+             </span>
+            <!--Labeling rate-->
+            <label for="rate">Rate </label>
+	    <span style="padding-left:60px">
+            <input type="range" min="1" max="20" step="0.25" value="10.25" onchange="rangeRelay()" id="rate">
+            
+            <span id="range_result">10.25%</span><br>
+            </span>
+            <!--Labeling No. of Years-->
+            <label for="years">No. of Years</label>
+	    <span style="padding-left:10px">
+            <input type="number"  id="years" list="data">  <br/>
+             </span>
+            <!--Drop down menu-->
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+            <datalist id="data">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </datalist>
+             <br>
+            <button onclick="compute()">Compute Interest</button><br>
+            <span id= "result"></span>
+            <br><br>
+            <footer>© Everyone Can Get Rich</footer>
 
-        <button onclick="compute()">Compute</button>
+        </div>
     </body>
 </html>
+
